# deco-assaying

./: Dockerfile  README.md  docker-compose.yml  humans_notes.md  pyproject.toml
.github/workflows/: release.yml
docs/: deco-assaying-architecture.md  dependency-update-automation.md
src/deco_assaying/: __main__.py  app.py  chunks.py  config.py  jobs.py  languages.py  manifest.py  outputs.py  prompts.py  retention.py  routes.py  walker.py
src/deco_assaying/analyzers/: python.py
src/parkview_codeparse/: analyze.py  chunks.py  config.py  detectors.py  github.py  gitlab.py  jobs.py  literals.py  providers.py  routes.py  source.py  walker.py
src/parkview_codeparse/analyzers/: __init__.py  _base.py  _fallback.py  python.py
tests/: conftest.py  test_analyze_fallback.py  test_analyze_python.py  test_chunks.py  test_detectors.py  test_gitlab.py  test_http_routes.py  test_index_repo.py  test_languages.py  test_literals.py  test_mcp_artifact_tools.py  test_mcp_prompts.py  test_outputs_http.py  test_retention.py  test_streaming.py
